[DOCFIX] Add one known issue for JVM running in containers
In some early Java 8 versions the jvm in a container do not see resource
defined in cgroup. Mention this known issue and solution in the
troubleshooting section in Alluxio-on-K8s doc.

pr-link: Alluxio/alluxio#14224
change-id: cid-e54122a1d1919102afaf1b7b3fed9ae88c9f09a5